# DharmaShield-env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
Planning/: DS_MasterFile.md  DharmaShield_V2_Execution_Plan.md  DharmaShield_V4_AgentPlan.md  HOW_TO_RUN_DharmaShield.md  Space1 & 2.md  🛡️ DharmaShield Env — Final Master Document.md
artifacts/: benchmark_profile_run.txt  final_pack_pytest.txt  final_pack_strict_router.txt  final_recheck_local_api.txt  final_recheck_openenv.txt  final_recheck_pytest.txt  final_recheck_strict_router.txt  hf_route_recheck_final.txt  hf_route_recheck_strict.txt  leaderboard_summary.csv  obs_upgrade_smoke.txt  post_v3_api_smoke_final.txt  post_v3_pytest.txt  preflight_openenv_validate.txt  preflight_pytest.txt  preflight_router_qwen.txt  router_HuggingFaceH4_zephyr-7b-beta.txt  router_Qwen_Qwen2.5-72B-Instruct.txt  router_Qwen_Qwen2.5-7B-Instruct.txt  router_llama.txt  router_meta-llama_Llama-3.3-70B-Instruct.txt  router_mistral.txt  router_mistralai_Mistral-7B-Instruct-v0.3.txt  router_mistralai_Mistral-Nemo-Instruct-2407.txt  router_qwen.txt  router_qwen32b.txt  router_qwen7b.txt  router_qwen_v4.txt  router_qwen_v4_final_strict.txt  v4_final_api_smoke.txt  v4_final_pytest.txt  v4_final_pytest_after_runbook.txt  v4_l0_api.txt  v4_l0_pytest.txt  v4_layer4_benchmark.txt  v4_preflight_api_smoke.txt  v4_preflight_pytest.txt
dharma_shield/: __init__.py  environment.py  exporter.py  grader.py  models.py  policy_book.py  runtime_config.py  server.py  task_data.py  ui.py  validators.py
(+17 files in other folders)
